--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ body {
 
 .App-header nav,
 .main,
-.categoryView {
+.categoryView,
+.postDetail {
     max-width: 80%;
     margin: 0 auto;
     padding: 10px;
@@ -25,7 +26,8 @@ body {
 
 .App-header nav ul,
 .main ul,
-.categoryView ul {
+.categoryView ul,
+.mainContent ul {
   list-style: none;
 }
 
@@ -134,4 +136,34 @@ body {
 
 .categoryView ul {
   width: 100%;
+}
+
+
+.postDetail {
+  background-color: #fff;
+  margin-top: 10px;
+  border: 1px solid #eee;
+  border-radius: 3px;
+}
+
+
+.postDetail h3 {
+  margin-bottom: 12px;
+}
+
+
+.comments {
+  margin: 16px 0;
+}
+
+.comments h4 {
+  margin: 10px 0;
+}
+
+.comment {
+  margin: 10px 0;
+}
+
+.commentBody {
+  font-size: 0.8em;
 }
