feat: Post increment decrement votescore control
Post detail view has controls to vote up/down through API

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+button {
+  background: none;
+  border: none;
+}
+
 
 .App-header {
   background-color: #fff;
