--- a/src/App.css
+++ b/src/App.css
@@ -170,9 +170,9 @@ button {
 .postCategory {
   color: #56B9D0;
   font-weight: bold;
-  text-transform: uppercase;
   font-size: 0.8em;
   text-align: right;
+  margin: 10px 0 0  ;
 }
 
 .comments {
@@ -180,11 +180,37 @@ button {
 }
 
 .comments h4 {
-  margin: 10px 0;
+  border-bottom: 1px solid #eee;
+  padding: 10px 0;
 }
 
-.comment {
-  margin: 10px 0;
+.comment,
+.voteScore  {
+  text-align: left;
+  width: 25%;
+  display: inline-block;
+}
+
+
+.comment img {
+  vertical-align: middle;
+  margin-right: 3px;
+}
+
+.voteScore img.dislike {
+  vertical-align: top;
+}
+
+.voteScore img  {
+  vertical-align: bottom;
+  margin-right: 3px;
+}
+
+.category {
+  display: inline-block;
+  width: 50%;
+  text-align: right;
+  text-transform: uppercase;
 }
 
 .commentBody {
@@ -267,11 +293,72 @@ button {
   vertical-align: middle;
 }
 
-.author address {
+.author address ,
+.commentAuthor address{
   font-size: 0.9em;
 }
 
-.author time {
+.author time,
+.commentAuthor time {
   font-size: 0.8em;
   color: #888;
+}
+
+
+.profileAuthor,
+.postEditControls {
+  display: inline-block;
+  width: 50%;
+  text-align: left;
+}
+
+
+.postEditControls {
+  text-align: right;
+}
+
+.postEditControls .editPost,
+.postEditControls .deletePost {
+  width: 50px;
+}
+
+.voteScoreDetail button,
+.commentScore button {
+  padding: 5px;
+  border: 1px solid #56B9D0;
+  border-radius: 3px;
+  margin-right: 6px;
+}
+
+.voteScoreDetail button span.voteScoreLabel,
+.commentScore button span.voteScoreLabel {
+  margin-left: 5px;
+  border-left: 1px solid #56B9D0;
+  padding-left: 5px;
+}
+
+
+.voteScoreDetail {
+  text-align: left;
+  width: 50%;
+  display: inline-block;
+}
+
+.commentAuthor address {
+  display: inline;
+  color: #56B9D0;
+}
+
+.postCommentBody {
+  font-size: 0.9em;
+  margin-bottom: 10px;
+}
+
+.postComment {
+  padding: 10px 0;
+  border-bottom: 1px solid #eee;
+}
+
+.postComment:last-child {
+  border: 0;
 }
