feat: posts and categories coming from the store
installed redux packages and created store using reducers and actions
used to get categories and posts

--- a/src/App.css
+++ b/src/App.css
@@ -233,6 +233,7 @@ button {
 
 .editdetails button, 
 .editdetails input[type="button"],
+.editdetails a.closeEdit,
 .editCommentdetails input[type="button"],
 .editCommentdetails input[type="submit"]{
   margin-top: 20px;
