--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+
 button {
   background: none;
   border: none;
@@ -26,10 +27,11 @@ button {
 .postDetail,
 .editDiv,
 .no-match {
-    max-width: 80%;
-    margin: 0 auto;
-    padding: 10px;
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 10px;
 }
+
 
 .App-header nav ul,
 .main ul,
@@ -38,14 +40,15 @@ button {
   list-style: none;
 }
 
+
 .App-header nav li {
-  display: inline-block; 
+  display: inline-block;
   width: 49%;
 }
 
 
 .App-header li.logo {
-  text-align: left; 
+  text-align: left;
 }
 
 
@@ -54,17 +57,17 @@ button {
 }
 
 
-.App-header li.edit a { 
+.App-header li.edit a {
   font-size: 1.4em;
   text-decoration: none;
-  color: #CA0035;
+  color: #ca0035;
 }
 
 
 .App-header .logo a {
   font-size: 2em;
   text-decoration: none;
-  color: #CA0035;
+  color: #ca0035;
 }
 
 
@@ -75,8 +78,8 @@ button {
 
 
 .App-header .edit img {
-    vertical-align: middle;
-    margin-right: 5px;
+  vertical-align: middle;
+  margin-right: 5px;
 }
 
 
@@ -87,21 +90,24 @@ button {
 
 
 .categories h3 {
-  border-bottom: 1px solid #aaa;
-  padding: 8px 8px 8px 0;
+  border-bottom: 1px solid #56b9d0;
+  padding: 15px 8px 4px 0;
   font-size: 1.2em;
   margin-bottom: 6px;
+  color: #ca0035;
 }
 
 
 .categories ul li {
-  padding: 4px 0;
+  padding: 5px;
 }
 
 
 .categories ul li a {
   text-decoration: none;
-  color: #333;
+  color: #56b9d0;
+  width: 100%;
+  display: inline-block;
 }
 
 
@@ -113,15 +119,18 @@ button {
   padding: 10px;
 }
 
+
 .sortPosts {
   text-align: right;
   margin-bottom: 10px;
 }
 
+
 .sortPosts span {
   font-size: 0.8em;
   color: #222;
 }
+
 
 .post {
   padding: 10px;
@@ -167,22 +176,26 @@ button {
   margin-bottom: 12px;
 }
 
+
 .postCategory {
-  color: #56B9D0;
+  color: #56b9d0;
   font-weight: bold;
   font-size: 0.8em;
   text-align: right;
   margin: 10px 10px 0 0;
 }
 
+
 .comments {
   margin: 16px 0;
 }
+
 
 .comments h4 {
   border-bottom: 1px solid #eee;
   padding: 10px 0;
 }
+
 
 .comment,
 .voteScore  {
@@ -197,14 +210,17 @@ button {
   margin-right: 6px;
 }
 
+
 .voteScore img.dislike {
   vertical-align: top;
 }
+
 
 .voteScore img  {
   vertical-align: bottom;
   margin-right: 6px;
 }
+
 
 .category {
   display: inline-block;
@@ -212,6 +228,7 @@ button {
   text-align: right;
   text-transform: uppercase;
 }
+
 
 .commentBody {
   font-size: 0.8em;
@@ -231,7 +248,7 @@ button {
 }
 
 
-.editdetails button, 
+.editdetails button,
 .editdetails input[type="button"],
 .editdetails a.closeEdit,
 .editCommentdetails input[type="button"],
@@ -248,7 +265,7 @@ button {
   text-align: center;
   text-decoration: none;
   color: #333;
-  margin-right: 10px; 
+  margin-right: 10px;
 }
 
 
@@ -257,11 +274,12 @@ button {
   width: 80%;
 }
 
+
 .no-match {
   text-align: center;
   font-size: 4em;
   padding: 50px;
-  color: #56B9D0;
+  color: #56b9d0;
   margin-top: 20px;
   border: 1px solid #eee;
   border-radius: 3px;
@@ -270,39 +288,54 @@ button {
 }
 
 
-.no-match span, 
+.no-match span,
 .error-label  {
-  color: #CA0035;
+  color: #ca0035;
 }
 
-.tag { display: inline-block; margin-right: 24px;  }
-.tag input[type="checkbox"] { width: 25px; display: inline-block; }
+
+.tag {
+  display: inline-block;
+  margin-right: 24px;
+}
+
+
+.tag input[type="checkbox"] {
+  width: 25px;
+  display: inline-block;
+}
+
 
 .profileImage {
   width: 40px;
   margin-right: 5px;
 }
 
+
 .profileImage img {
   border-radius: 20px;
   vertical-align: middle;
 }
 
+
 .postInfo {
   margin: 6px 0;
 }
+
 
 .author {
   display: inline-block;
   vertical-align: middle;
 }
 
+
 .author address ,
 .commentAuthor address{
   font-size: 0.8em;
-  color: #56B9D0;
+  color: #56b9d0;
   font-style: normal;
 }
+
 
 .author time,
 .commentAuthor time {
@@ -323,23 +356,26 @@ button {
   text-align: right;
 }
 
+
 .postEditControls .editPost,
 .postEditControls .deletePost {
   width: 50px;
 }
 
+
 .voteScoreDetail button,
 .commentScore button {
   padding: 5px;
-  border: 1px solid #56B9D0;
+  border: 1px solid #56b9d0;
   border-radius: 3px;
   margin-right: 6px;
 }
 
+
 .voteScoreDetail button span.voteScoreLabel,
 .commentScore button span.voteScoreLabel {
   margin-left: 5px;
-  border-left: 1px solid #56B9D0;
+  border-left: 1px solid #56b9d0;
   padding-left: 5px;
 }
 
@@ -350,20 +386,24 @@ button {
   display: inline-block;
 }
 
+
 .commentAuthor address {
   display: inline;
-  color: #56B9D0;
+  color: #56b9d0;
 }
+
 
 .postCommentBody {
   font-size: 0.9em;
   margin-bottom: 10px;
 }
 
+
 .postComment {
   padding: 10px 0;
   border-bottom: 1px solid #eee;
 }
+
 
 .postComment:last-child {
   border: 0;
@@ -389,5 +429,7 @@ button.deleteComment img {
 
 
 .activeCategory {
-  background: #eee;
+  background: #daebf2;
+  border: 1px solid #b9daeb;
+  border-radius: 3px;
 }
