--- a/src/App.css
+++ b/src/App.css
@@ -200,7 +200,7 @@ button {
 .comment,
 .voteScore  {
   text-align: left;
-  width: 25%;
+  width: 33%;
   display: inline-block;
 }
 
@@ -222,11 +222,20 @@ button {
 }
 
 
+.voteScore button {
+  margin-right: 16px;
+}
+
+
 .category {
   display: inline-block;
-  width: 50%;
+  width: 33%;
   text-align: right;
   text-transform: uppercase;
+}
+
+.postDetail .category {
+  width: 50%;
 }
 
 
